--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --runInBand --detectOpenHandles --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -36,5 +36,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ],
+    "coveragePathIgnorePatterns": [
+      "index.js",
+      "serviceWorker.js",
+      "reportWebVitals.js",
+      "./services/renderWithRouter",
+      "./services/history"
+    ],
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/axios.js"
+    }
   }
 }
