feat: adicionado o comando prestart no backend.

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "web-chat",
   "main": "index.js",
   "scripts": {
+    "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "mocha src/tests/**/*.test.js --exit",
