--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false npm run build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test --runInBand --detectOpenHandles --verbose",
     "eject": "react-scripts eject"
   },
