refactor: refatorado o start do frontend, substituído o padrão por "serve build -s -n -L -p $PORT".

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve build -s -n -L -p $PORT",
     "build": "react-scripts build",
     "test": "react-scripts test --runInBand --detectOpenHandles --verbose",
     "eject": "react-scripts eject"
