--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "serve": "^14.2.0"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "serve build -s -n -L -p $PORT",
     "build": "react-scripts build",
     "test": "react-scripts test --runInBand --detectOpenHandles --verbose",
